# pax

./: .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  example.cpp
.github/workflows/: cmake.yml
cmake/: pxConfig.cmake.in
example/: example.cpp
include/: px.h
src/: main.cpp  pax.h  px.cpp
test/: BUILD  CMakeLists.txt  main.cpp  testpx.cpp
